Nodes have default values and implemented more nodes.